# goop-gfx

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE
cmake/: AddShaderPackage.cmake  GenerateSource.cmake
cmake/templates/: secure_string.hpp  shader.cpp  shader.h
exe/: CMakeLists.txt
exe/blockgen/: CMakeLists.txt  blockgen.cpp
exe/model/: CMakeLists.txt  atlas_cache.cpp  atlas_cache.hpp  dirty_info.hpp  gui_test.hpp  model.cpp  panel_2d.cpp  panel_2d.hpp  sdf_2d.cpp  sdf_2d.hpp  sdf_font.cpp  sdf_font.hpp  symbol.cpp  symbol.hpp  text.cpp  text.hpp  vec.cpp  vector_graphics.cpp  vector_graphics.hpp
exe/model/shaders/: CMakeLists.txt  model.fs  model.vs
exe/model/ui/: element.cpp  element.hpp  frame.cpp  frame.hpp  label.cpp  label.hpp  layout_params.cpp  layout_params.hpp  ui_context.hpp
goop/: CMakeLists.txt  EXP_experimental.hpp  default_app.cpp  default_app.hpp  dynamic_octree.hpp  dynamic_octree.inl.hpp  geometry.cpp  geometry.hpp  graphics.hpp  hash.hpp  multi_draw.cpp  multi_draw.hpp  shadow.hpp
goop/algorithm/: anim.hpp  cull.hpp  looper.cpp  looper.hpp  perlin.hpp  utility.hpp
goop/animation/: animation.cpp  animation.hpp  smooth.hpp
goop/components/: collider_component.hpp  movement_component.hpp  physics_component.hpp  transform_component.hpp
goop/file/: gltf.cpp  gltf.hpp  gltf__WIP.cpp  gltf__WIP.hpp  obj.cpp  obj.hpp
goop/generic/: buffer.cpp  buffer.hpp  draw_state.hpp  geometry.cpp  geometry.hpp  geometry_format.hpp  handle.hpp  mapped_buffer.hpp  mapped_buffer.inl.hpp  primitives.cpp  primitives.hpp  render_target.hpp  sampler.hpp  shader.cpp  shader.hpp  texture.hpp  texture_provider.hpp
goop/opengl/: buffer.cpp  buffer.hpp  draw_state.cpp  draw_state.hpp  geometry.cpp  geometry.hpp  geometry_format.cpp  geometry_format.hpp  handle.cpp  handle.hpp  mapped_buffer.hpp  render_target.cpp  render_target.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
goop/vectors/: character_ranges.hpp  distance.hpp  font.cpp  font.hpp  font_features.hpp  font_languages.hpp  font_scripts.hpp  font_table.hpp  font_tag.hpp  lines.hpp  meta_image.hpp  skyline_packer.cpp  skyline_packer.hpp  vectors.hpp
res/: grass_attrib.html
res/ptcl/: scene.gltf
